--- a/American_Dream_Project/View/Main.storyboard
+++ b/American_Dream_Project/View/Main.storyboard
@@ -2,6 +2,7 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16096" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="7S2-H8-JyV">
     <device id="retina4_0" orientation="portrait" appearance="light"/>
     <dependencies>
+        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="Stack View standard spacing" minToolsVersion="9.0"/>
@@ -11,7 +12,7 @@
         <!--Exchange Rate-->
         <scene sceneID="fK9-8i-45I">
             <objects>
-                <viewController id="RFn-cg-xm1" customClass="Exchange_rateViewController" customModule="American_Dream_Project" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="RFn-cg-xm1" customClass="ExchangeRateViewController" customModule="American_Dream_Project" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="tEo-7F-GGQ">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -173,7 +174,7 @@
         <!--Open Weather-->
         <scene sceneID="mMB-Dd-AAN">
             <objects>
-                <viewController id="hVs-j4-DG4" customClass="OpenWeatherViewController" customModule="American_Dream_Project" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="hVs-j4-DG4" customClass="WeatherViewController" customModule="American_Dream_Project" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="HtZ-VD-SBZ">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -193,9 +194,9 @@
                                     <action selector="didChangeSegment:" destination="hVs-j4-DG4" eventType="valueChanged" id="S2s-2a-M1U"/>
                                 </connections>
                             </segmentedControl>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="globe" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="3WH-xE-Tp1">
-                                <rect key="frame" x="60" y="135" width="200" height="98.5"/>
-                                <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="world" translatesAutoresizingMaskIntoConstraints="NO" id="3WH-xE-Tp1">
+                                <rect key="frame" x="60" y="134" width="200" height="100"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="100" id="PFD-px-tJP"/>
                                     <constraint firstAttribute="width" constant="200" id="VE4-vp-zRo"/>
@@ -283,7 +284,7 @@
         <scene sceneID="pvn-Vp-Iz3">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="CuN-WV-ma0" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Weather" image="sun.min" catalog="system" id="Y5R-Mz-NgR"/>
+                    <tabBarItem key="tabBarItem" title="Weather" image="sun" id="Y5R-Mz-NgR"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="ext-5x-VH1" userLabel="Open Weather">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
@@ -302,7 +303,7 @@
         <scene sceneID="x5a-uH-LOo">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="ryI-JL-d36" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Traduction" image="flag" catalog="system" id="nCG-gQ-hgR"/>
+                    <tabBarItem key="tabBarItem" title="Traduction" image="flag1" id="nCG-gQ-hgR"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="jhg-YU-qc8">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
@@ -321,7 +322,7 @@
         <scene sceneID="5ge-ku-7ba">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="GAn-Wb-bSY" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Money" image="dollarsign.circle.fill" catalog="system" id="xLJ-qY-5Vf"/>
+                    <tabBarItem key="tabBarItem" title="Money" image="money" id="xLJ-qY-5Vf"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="H8T-MU-Rid">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
@@ -338,12 +339,12 @@
         </scene>
     </scenes>
     <resources>
-        <image name="dollarsign.circle.fill" catalog="system" width="128" height="121"/>
         <image name="euros" width="194" height="130"/>
-        <image name="flag" catalog="system" width="128" height="121"/>
-        <image name="globe" catalog="system" width="128" height="121"/>
+        <image name="flag1" width="25" height="25"/>
+        <image name="money" width="25" height="25"/>
         <image name="senegal" width="400" height="267"/>
-        <image name="sun.min" catalog="system" width="128" height="121"/>
+        <image name="sun" width="25" height="25"/>
         <image name="usa" width="800" height="421"/>
+        <image name="world" width="512" height="512"/>
     </resources>
 </document>
